# Anim8orX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/architecture/: Step1_Blueprint.md
examples/: cube.an8  nested-face.an8  primitive-components.an8
include/Anim8orX/Import/: An8Parser.hpp
include/Anim8orX/Viewport/: Camera.hpp
releases/: README-Windows-x64.md  v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md  v0.6.7.md  v0.6.8.md
src/: main.cpp
